--- a/css/styles.css
+++ b/css/styles.css
@@ -7,16 +7,24 @@
 
 
 .container{
-  max-width: 700px;
+  max-width: 800px;
   margin: 2rem auto;
-  display: flex;
-  flex-direction: column;
+  
+  display: grid;
+  grid-template-columns:1fr 2fr;
+  align-items: start;
 }
 
+.group {
+  grid-row: 1;
+  grid-column: 1;
+}
 
 .btn {
     padding: 1rem 4rem;
     margin: 1rem auto;
+    border-radius: 5px;
+    border: 1px solid #000;
 }
 
 
@@ -24,13 +32,29 @@ thead tr th{
     text-align: justify;
 }
 
-.filters {
+.filters, .style-filter {
     display: none;
 }
+
+.content {
+  border-collapse: collapse;
+  grid-row: 2;
+  grid-column: 2;
+}
+
 
 .style-filter {
     flex-direction: column;
     max-width: 5vw;
     align-items: flex-start;
-    margin: 0 28vw;
+}
+
+.style-filter input, .style-filter select {
+  padding: 0.5rem;
+
+}
+
+.style-filter input {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
 }
